Fix colors for dark mode

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -12,6 +12,9 @@
                 -webkit-text-fill-color: transparent;
             }
         }
+        img {
+            filter: var(--img-filter);
+        }
         display: flex;
         flex-direction: column;
         align-items: center;
